docs/sources/python-base/cn/python-controller-pass.rst.txt
Python pass 语句
================

简述
-----------------------------------
在 Python 中，pass 是一个空语句，为了保持程序结构的完整性。一般情况下，pass 被用作占位符。

pass 和注释之间的区别在于：解释器会完全忽略注释，但不会忽略 pass。

然而，执行 pass 时什么都不会发生，导致无操作（NOP）。

pass 语句
------------------------------------

语法格式：

::

   pass

假设，欧阳锋写了一个循环或者函数，尚未实现（暂未想好如何实现或者出差交付给其他人），但是会在将来的某个时候实现。这时，如果循环体或者函数体为空，解释器就会报错。所以，可以使用 pass 语句构造一个不做任何事情的主体。

上课了，开始听歌，随机播放、顺序播放、单曲循环、列表循环。。。反复思量着，到底选哪一个呢？没想好，那么就先纠结着，什么都不干！

::

    songs = ['安静', '蜗牛', '稻香']
    for song in songs:

<button>Run ...</button>

执行语句，输出如下：

::

    SyntaxError: unexpected EOF while parsing


报错了，所以呢？还是乖乖的加上 pass 吧！


::

    songs = ['安静', '蜗牛', '稻香']
    for song in songs:
        ^4$pass

<button>Run ...</button>

相应的，也可以在空函数或类中做同样的事情：

::
    def function(args):
        ^4$pass

<button>Run ...</button>

::

    class example:
        ^4$pass

<button>Run ...</button>

总之，pass 什么也不做，就是为了占位，防止语法错误。



作者 & 更新时间
------------------------------------
作者: `一去丶二三里 <http://blog.csdn.net/liang19890820>`_

提交: 2017/12/6
